# mubi2letterboxd-py

./: .gitignore  Makefile  README.md  mubi2letterboxd.py  pyproject.toml  requirements.txt
.github/workflows/: linters.yml  pyinstaller-windows.yml
